Sorting fixes
